--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: '0 06 * * *'
+    - cron: '22 06 * * 1'
 
 jobs:
   ibm-cloud-restart:
